<resources>
    <string name="app_name">Intent Implicito</string>
    <string name="text_name">Introduce busqueda:</string>
    <string name="text_hint">Texto a buscar.</string>
    <string name="image_desc_mensaje">Enviar un mensaje con el texto.</string>
    <string name="image_desc_buscar">Buscar el texto en Internet.</string>
    <string name="image_desc_mapas">Abrir la dirección en Mapas</string>
    <string name="image_desc_web">Abrir una dirección Web.</string>
    <string name="button_animation_1">Animación Search Button</string>
    <string name="button_animation_2">Animación Imagen Left to Right</string>
    <string name="button_animation_3">Animación Imagen Scale up And Fade Out</string>
    <string name="button_animation_4">Animación Menú Floating Button</string>
    <string name="image_desc_lion">image to animate</string>
    <string name="title_activity_animation4">Animation4Activity</string>
</resources>
