<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_name"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:animateLayoutChanges="true"
        android:background="@drawable/rounded_bg"
        android:ems="10"
        android:hint="@string/text_hint"
        android:inputType="textPersonName"
        android:minWidth="52dp"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLabel" />

    <ImageButton
        android:id="@+id/imageButtonMaps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_bg"
        android:contentDescription="@string/image_desc_buscar"
        android:onClick="mapas"
        android:padding="14dp"
        app:layout_constraintEnd_toStartOf="@+id/imageButtonSearch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageButtonSearch"
        app:srcCompat="@drawable/ic_map_black_24dp" />

    <ImageButton
        android:id="@+id/imageButtonSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_bg"
        android:contentDescription="@string/image_desc_buscar"
        android:onClick="buscar"
        android:padding="14dp"
        app:layout_constraintEnd_toEndOf="@+id/imageButtonMessage"
        app:layout_constraintStart_toEndOf="@+id/imageButtonMaps"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:srcCompat="@drawable/ic_search_black_24dp" />

    <ImageButton
        android:id="@+id/imageButtonMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_bg"
        android:contentDescription="@string/image_desc_mensaje"
        android:onClick="mensaje"
        android:padding="14dp"
        app:layout_constraintEnd_toEndOf="@+id/imageButtonWeb"
        app:layout_constraintStart_toEndOf="@+id/imageButtonSearch"
        app:layout_constraintTop_toTopOf="@+id/imageButtonSearch"
        app:srcCompat="@drawable/ic_message_black_24dp" />

    <ImageButton
        android:id="@+id/imageButtonWeb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_bg"
        android:contentDescription="@string/image_desc_web"
        android:onClick="webView"
        android:padding="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageButtonMessage"
        app:layout_constraintTop_toTopOf="@+id/imageButtonSearch"
        app:srcCompat="@drawable/ic_web_black_24dp" />

</android.support.constraint.ConstraintLayout>